--- a/umb-web-taller/Dockerfile
+++ b/umb-web-taller/Dockerfile
@@ -2,19 +2,23 @@
 FROM php:8.2-apache
 
 # 1. Instalar las dependencias de PostgreSQL y la extensión PDO_PGSQL
-# Libpq-dev es la librería cliente de PostgreSQL
-RUN apt-get update && apt-get install -y \
-    libpq-dev \
+# RUN apt-get update && apt-get install -y \
+#     libpq-dev \
+#     && docker-php-ext-install pdo pdo_pgsql \
+#     && rm -rf /var/lib/apt/lists/* <-- Este comando de limpieza a veces causa problemas, puedes omitirlo para el diagnóstico.
+    
+# **VERSIÓN RECOMENDADA MÁS SEGURA PARA DEPLIEGUE**
+RUN apt-get update \
+    && apt-get install -y libpq-dev \
     && docker-php-ext-install pdo pdo_pgsql \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 # 2. Copiar los archivos de la API al directorio web de Apache
 COPY api/ /var/www/html/
 
-# 3. Habilitar mod_rewrite para URLs amigables (aunque no es estrictamente necesario para index.php)
+# 3. Habilitar mod_rewrite
 RUN a2enmod rewrite
 
-# 4. Establecer permisos (buena práctica de seguridad)
+# 4. Establecer permisos
 RUN chown -R www-data:www-data /var/www/html
-
-# El puerto 80 ya está expuesto por defecto en la imagen base.
